--- a/src/pages/login.module.css
+++ b/src/pages/login.module.css
@@ -11,9 +11,20 @@
 .bcgimage {
   flex-basis: 65%;
   height: 100vh;
-  background: url("../assets/images/bgp-logreg.jpg");
+  display: flex;
+  background: rgba(0, 0, 0, 0.3);
+  background-image: url("../assets/images/bgp-logreg.jpg");
   background-repeat: no-repeat;
   background-size: cover;
+}
+.title {
+  width: 80%;
+  left: 50px;
+  top: 88px;
+  right: 20px;
+  font-size: 25px;
+  color: #f9f9f9;
+  padding: 20px;
 }
 .logreg {
   flex-basis: 35%;
@@ -28,13 +39,16 @@
   width: 15%;
 }
 .logregcontent {
-  /* width: 100%; */
+  width: 80%;
   position: absolute;
-  top: 80px;
-  padding: 0 5% 0 5%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
+  top: 100px;
+  margin: 0 10%;
+}
+.logregcontentres {
+  width: 80%;
+  display: none;
+  align-self: center;
+  justify-self: center;
   margin: 0 auto;
 }
 .logincontainer,
@@ -47,23 +61,30 @@
   padding: 0;
   margin: 0;
 }
-.loghead {
+.loghead,
+.reghead {
   width: 70%;
   flex-basis: 70%;
   margin-bottom: 30px;
 }
-.loghead h1 {
+.loghead h1,
+.reghead h1 {
   font-size: 64px;
   margin: 0;
 }
-.loginput {
+.reghead h1 {
+  font-size: 50px;
+  margin: 0;
+}
+.loginput,
+.reginput {
   flex-basis: 100%;
   display: flex;
   flex-direction: column;
   /* box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.1); */
 }
 .line {
-  width: 90%;
+  width: 95%;
   flex-basis: 100%;
   border: 1px solid #e0e0e0;
   margin: 0;
@@ -86,7 +107,7 @@
   color: #424242;
 }
 .linepassword {
-  width: 90%;
+  width: 95%;
   flex-basis: 100%;
   border: 1px solid #e0e0e0;
   margin: 0;
@@ -103,7 +124,9 @@
   font-size: 17px;
 }
 .email,
-.pass {
+.pass,
+.username,
+.fullname {
   width: 100%;
   margin: 0;
   border: none;
@@ -117,9 +140,42 @@
 }
 .input::placeholder {
   font-size: 50px;
-  /* background-color: rgb(250, 244, 244); */
 }
 
+.linebutton {
+  width: 100%;
+  flex-basis: 100%;
+  padding: 0;
+  margin-top: 20px;
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  color: #d0cccc;
+}
+.buttonlogin {
+  border: none;
+  background-color: #000000;
+  border-radius: 5px;
+  color: #ffffff;
+  width: 110px;
+  height: 36px;
+}
+.buttonsignup {
+  background: #ffffff;
+  border: 1px solid #d0cccc;
+  box-sizing: border-box;
+  border-radius: 5px;
+  width: 110px;
+  height: 36px;
+  margin: 15px;
+  color: #d0cccc;
+}
+.foot {
+  position: absolute;
+  bottom: 10px;
+  right: 100px;
+  width: 20%;
+}
 @media screen and (max-width: 768px) {
   .content {
     display: flex;
@@ -131,7 +187,34 @@
     background-color: #fff;
     height: 100vh;
   }
+  .title {
+    display: none;
+  }
+  .logregcontentres {
+    display: flex;
+    align-self: center;
+    justify-self: center;
+    background-color: #eedfdf59;
+    border-radius: 5px;
+    padding: 10%;
+  }
   .logreg {
     display: none;
+  }
+  .loghead,
+  .reghead {
+    width: 70%;
+    flex-basis: 70%;
+    margin-bottom: 30px;
+    color: #ffffff;
+  }
+  .linecheckbox p {
+    color: #ffffff;
+  }
+  .foot {
+    position: absolute;
+    bottom: 10px;
+    left: 30px;
+    width: 50%;
   }
 }
